# mediawiki-services-parsoid

./: .afignore  .editorconfig  .eslintignore  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .gitreview  .jscsrc  .jshintignore  .jshintrc  .mailmap  .nsprc  .phpcs.xml  .phpspec.yml  .travis.yml  AUTHORS.txt  DomImpl.php  Doxyfile  HISTORY.md  History.md  Parsoid.php  README.md  README.txt  composer.json  config.example.yaml  config.yaml  core-upgrade.js  doc.guides.json  extension.json  htmldiffs.config.example.yaml  jsdoc.json  jsduck.json  localsettings.example.js  localsettings.js.example  manifest.yml  npm-shrinkwrap.json  package-lock.json  package.json  (+6 more)
.jsduck/: categories.json  external.js  guides.json
.phan/: config.php  standalone.php
.phan/stubs/: AllowDynamicProperties.php  DataParsoid.php  DomImpl.php  Grammar.php  HTMLDocument.php  LogData.php  MobileContext.php  ReturnTypeWillChange.php  TracingGrammar.php
.pipeline/: blubber.yaml  config.yaml
api/: ParserService.js  ParsoidService.js  README.runserver.txt  localsettings.js.example  routes.js  server.js  testGerritMaster.sh  utils.js
api/scripts/: jquery.js  scrolling.js
api/views/: form.html  home.html  layout.html  roundtrip.html
baseconfig/: README  arwiki.json  banwiki.json  be-taraskwiki.json  cawiki.json  cswiki.json  dewiki.json  enwiki.json  eowiki.json  eswiki.json  fawiki.json  fiwiki.json  frwiki.json  iswiki.json  jawiki.json  kaawiki.json  lnwiki.json  nlwiki.json  ruwiki.json  srwiki.json  trwiki.json  zhwiki.json
baseconfig/2/: arwiki.json  banwiki.json  be-taraskwiki.json  cawiki.json  cswiki.json  dewiki.json  enwiki.json  eswiki.json  fawiki.json  (+10 more)
cpp/: .gitignore  CMakeLists.txt  Makefile  README
cpp/contrib/peg-0.1.9/: Makefile  compile.c
cpp/contrib/pugixml-cmake/: CMakeLists.txt
cpp/php/: CREDITS  config.m4  config.w32  parsoid.c  parsoid.php  php_parsoid.h
cpp/php/tests/: 001.phpt
cpp/src/: AsyncTokenTransformManager.hpp  CMakeLists.txt  DOMBase.hpp  Frame.hpp  InputExpansionPipeline.hpp  IntrusivePtrBase.hpp  LibIncludes.hpp  Makefile  OutputPipeline.hpp  Parsoid.cpp  Parsoid.hpp  ParsoidEnvironment.hpp  PipelineStage.hpp  QueueDispatcher.cpp  QueueDispatcher.hpp  Scope.cpp  Scope.hpp  SyncTokenTransformManager.hpp  Token.cpp  Token.hpp  TokenHandler.hpp  TokenTransformManager.cpp  TokenTransformManager.hpp  TokenTransformManagerBase.hpp  TokenTransformer.cpp  TokenTransformer.hpp  TreeBuilder.cpp  TreeBuilder.hpp  TreeBuilder_Hubbub.cpp  TreeBuilder_Hubbub.hpp  WikiTokenizer.cpp  WikiTokenizer.hpp  XMLDOM.hpp  XMLDOM_Pugi.cpp  XMLDOM_Pugi.hpp  html_parser.cc  html_parser.cpp  html_parser.h  mediawiki_api.h  parsoid_internal.hpp  (+9 more)
cpp/src/token/: Makefile  token.cpp  token.hpp  tokentest.cpp  virttoken.cpp  virttoken.hpp
cpp/test/: CMakeLists.txt  Makefile  test.cc
docs/: apiuse.md  data.md  design.md  devsetup.md  metrics.md  separators.md  setup.md
extension/: README.md  ServiceWiring.php  restRoutes.json
guides/: devsetup.md  guides.json
js/: doc.basicTypes.js  jsduck-conf.json  package.json
lib/: FromHTML.js  LogData.js  Logger.bunyan.js  Logger.js  ParsoidLogger.js  XMLSerializer.js  _http_agent.js  core-upgrade.js  dom.cleanUpTemplates.js  dom.cleanup.js  dom.computeDSR.js  dom.dumper.js  dom.generateRefs.js  dom.handlePres.js  dom.handleUnbalancedTables.js  dom.linter.js  dom.markFosteredContent.js  dom.markTreeBuilderFixups.js  dom.migrateTemplateMarkerMetas.js  dom.migrateTrailingNLs.js  dom.minimizeTags.js  dom.processRefs.js  dom.stripEmptyElements.js  dom.t.TableFixups.js  dom.t.handleLIHack.js  dom.t.handleLinkNeighbours.js  dom.t.liFixups.js  dom.t.unpackDOMFragments.js  dom.wrapTemplates.js  domTraverser.js  ext.Cite.js  ext.core.AttributeExpander.js  ext.core.BehaviorSwitchHandler.js  ext.core.DOMFragmentBuilder.js  ext.core.ExtensionHandler.js  ext.core.LinkHandler.js  ext.core.ListHandler.js  ext.core.NoIncludeOnly.js  ext.core.ParagraphWrapper.js  ext.core.ParserFunctions.js  (+44 more)
php/: CurlMultiClient.php  Parsoid.hooks.php  Parsoid.i18n.php  Parsoid.php  ParsoidCacheUpdateJob.php
specs/: apiv2.yaml
src/: ClientError.php  ContentModelHandler.php  ExtensionContentModelHandler.php  FromHTML.php  InternalException.php  PageBundle.php  Parsoid.php  README.md  ResourceLimitExceededException.php  Selser.php  SelserData.php  WikitextContentModelHandler.php  index.php  parse.php
tests/: MockEnv.js  MockEnv.php  ParserTestsGrammar.pegphp  ParserTestsPEG.php  README  README.md  RTTestSettings.php  TestUtils.js  TestUtils.php  apiServer.js  bugSplit.js  citeParserTests-blacklist.js  citeParserTests-blacklist.json  citeParserTests-knownFailures.json  citeParserTests-php-blacklist.json  citeParserTests.txt  debug_selser.sh  domdiff.test.js  dumpGrepper.js  dumpReader.js  fetch-parserTests.txt.js  fetch-wt.js  fetch_ve_nowiki_edits.js  langParserTests-php-blacklist.json  langParserTests.txt  mockAPI.js  parse.js  parserTests-blacklist.js  parserTests-blacklist.json  parserTests-knownFailures.json  parserTests-php-blacklist.json  parserTests-whitelist.js  parserTests.js  parserTests.json  parserTests.pegjs  parserTests.txt  parserTests.utils.js  parserTestsParserHook.js  poemParserTests.txt  process_bug_report.sh  (+11 more)
tools/: ExtendedOptsProcessor.php  FetchParserTests.php  FetchWmfSitematrix.php  FetchWt.php  FetchingTool.php  GetTOC.php  Maintenance.php  OptsProcessor.php  ParseUtils.php  RCUtils.js  RegressionTesting.php  ScriptUtils.js  ScriptUtils.php  ShellUtils.php  SyncBaseConfig.php  SyncParserTests.php  TestUtils.php  benchmark-wt2html.sh  build-langconv-fst.js  ci-mw-parsertests.sh  compare.linter.results.js  doMaintenance.php  fetch-parserTests.js  fetch-parserTests.txt.js  fetch-revision-data.js  fetch-sitematrix.js  fetch-wmf-sitematrix.js  fetch-wt.js  fetch_stray_toc_edits.js  fetch_ve_nowiki_edits.js  fetch_ve_zhwiki_lv_edits.js  gen-json-blacklist.js  gen_deploy_log.sh  gen_timing_data.js  gen_visualdiff_titles.js  js2php.js  prepare_vendor_patch.sh  ptest.vim  regen-transformTests.sh  regression-testing.js  (+7 more)
(+1471 files in other folders)
